fix svg text alignment in some browsers

--- a/resources/sass/tile-front-svg.scss
+++ b/resources/sass/tile-front-svg.scss
@@ -43,7 +43,7 @@
 .weapon-grid-heading,
 .weapon-grid-heading-left,
 .weapon-grid-row {
-    font-family: 'Roboto Condensed';
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 5pt;
     font-weight: bold;
     fill: #fff;
@@ -55,6 +55,10 @@
     stroke-width: 0.5pt;
     stroke-linecap: butt;
     stroke-linejoin: miter;
+    text {
+        alignment-baseline: middle;
+        dominant-baseline: middle;
+    }
 }
 
 .weapon-grid-value-D8 {
@@ -70,6 +74,8 @@
 .weapon-grid-row-left {
     text-align: left;
     text-anchor: start;
+    alignment-baseline: middle;
+    dominant-baseline: middle;
 }
 
 .weapon-grid-block {
@@ -101,6 +107,15 @@
     stroke-width: 0.5pt;
     stroke-linecap: butt;
     stroke-linejoin: miter;
+    text {
+        alignment-baseline: middle;
+        dominant-baseline: middle;
+        tspan {
+            alignment-baseline: middle;
+            dominant-baseline: middle;
+
+        }
+    }
 }
 
 .damage-track-result-boxes {
